[tmux] Use modern style options

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -25,9 +25,7 @@ set-option -g aggressive-resize on
 set-option -g clock-mode-style 24
 
 # Messageline
-set-option -g message-bg black
-set-option -g message-fg blue
-set-option -g message-attr dim
+set-option -g message-style bg=black,fg=blue,dim
 
 # Statusline
 TMUX_DIVIDER="#[fg=default] // "
@@ -44,14 +42,9 @@ set-option -g window-status-format "$TMUX_WINDOW_FORMAT"
 set-option -g window-status-current-format "$TMUX_WINDOW_FORMAT"
 set-option -g window-status-separator " / "
 
-set-option -g window-status-current-fg green
-set-option -g window-status-current-attr bold
-
-set-option -g window-status-bell-attr underscore
-set-option -g window-status-bell-fg red
-
-set-option -g window-status-activity-attr none
-set-option -g window-status-activity-fg magenta
+set-option -g window-status-current-style fg=green,bold
+set-option -g window-status-bell-style fg=red,underscore
+set-option -g window-status-activity-style fg=magenta,none
 
 set-option -g renumber-windows on
 
