[tmux] Remove background from status line

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -31,7 +31,7 @@ set-option -g message-style bg=black,fg=blue,dim
 TMUX_DIVIDER="#[fg=default] // "
 TMUX_WINDOW_FORMAT="#{window_index} #{window_name}"
 
-set-option -g status-style fg=default,bg=black
+set-option -g status-style fg=default,bg=default
 
 set-option -g status-left "#[fg=blue]#{host_short} → #{session_name}$TMUX_DIVIDER"
 set-option -g status-left-length 50
