[sway+scripts] Group qutebrowser windows together
This emulates having real browser windows with tabs_are_windows. The
script that does the grouping is app-agnostic, it simply looks for
a home for any container currently on the scratchpad.

--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -265,6 +265,14 @@ mode "passthrough" {
 bindsym $mod+p mode "passthrough"
 
 #
+# Rules
+#
+
+# Group qutebrowser tabs with other qutebrowser tabs, no matter where they
+# open from.
+for_window [app_id=qutebrowser] 'move scratchpad, exec /home/vil/System/scripts/sway-group-like'
+
+#
 # Daemons
 #
 
