--- a/dotfiles/i3blocks/config
+++ b/dotfiles/i3blocks/config
@@ -1,5 +1,5 @@
 [mpris]
-command=playerctl metadata --format '{{ status }} {{ artist }} - {{ title }}' --follow | perl -pe '$| = 1; s/^(Playing|Paused)(  \- )?/\1/; s/^Playing/  /; s/^Paused/  /'
+command=playerctl metadata --format '{{ status }} {{ artist }} - {{ title }}' --follow | perl -pe '$| = 1; s/^(Playing |Paused )( \- )?/\1/; s/^Playing /  /; s/^Paused /  /'
 interval=persist
 
 [updates]
@@ -16,13 +16,14 @@ command=$HOME/System/scripts/bar/network.py
 interval=persist
 format=json
 
+[memory]
+command=printf "  %s\n" "$(awk 'NR < 3 { print $2 }' /proc/meminfo | dc -f- -e 'r2k/1r-100*0k1/p')"
+interval=30
+
 [battery]
-command=acpi -b | perl -ne 'print if s/.*?(\d+:\d+):\d+ (remaining|until charged)/\1/'
+command=acpi -b | perl -ne 'if (/.*?\d+(\d:\d+):\d+ (remaining|until charged)/) { if ("$2" eq "remaining") { print "  $1\n"; } else { print "  $1\n\n#88ff88\n"; } }'
 interval=30
 
 [clock]
-command=date +'%H:%M'
+command=date +'·   %H:%M   '
 interval=1
-
-[space]
-full_text= 
