[systemd] Improve bup-home.service
Now checks that the destination is reachable before running. Also no
longer use a shell to compose the two commands, since systemd can do
that for us.

--- a/dotfiles/systemd/user/bup-home.service
+++ b/dotfiles/systemd/user/bup-home.service
@@ -5,7 +5,9 @@ Documentation=man:bup(1)
 [Service]
 Environment=BUP_DIR=%h/.bup
 Environment=BUP_REMOTE_DIR=compendium:/srv/storage/pool0/backups/%H
-Nice=5
+Nice=19
 
 Type=simple
-ExecStart=sh -c "bup index --exclude=%C --xdev %h && bup save --name=home-%u --commit --remote=${BUP_REMOTE_DIR} %h"
+ExecCondition=ssh -o ConnectTimeout=5s compendium true
+ExecStartPre=bup index --exclude=%C --xdev %h
+ExecStart=bup save --name=home-%u --commit --remote=${BUP_REMOTE_DIR} %h
