[scripts/bar] Add UPower-based battery block
Because my system has multiple batteries, acpi gives a completely
inaccurate estimate for both time and percentage remaining. Use UPower
to monitor battery state and calculate it ourselves.

This also provides a place to do some smoothing of the estimated time
remaining, but I'm saving that for a rainy-day project.

--- a/dotfiles/i3blocks/config
+++ b/dotfiles/i3blocks/config
@@ -26,8 +26,9 @@ command=printf "  %s\n" "$(awk 'NR == 1 || NR == 3 { print $2 }' /proc/meminf
 interval=30
 
 [battery]
-command=acpi -b | perl -ne 'if (/.*?\d+(\d:\d+):\d+ (remaining|until charged)/) { if ("$2" eq "remaining") { print "  $1\n"; } else { print "  $1\n\n#88ff88\n"; } }'
-interval=30
+command=$HOME/System/scripts/bar/battery.py
+interval=persist
+format=json
 
 [clock]
 command=date +'·   %H:%M   '
