[scripts/bar] Add media status
This replaces the old, extremely fragile playerctl pipeline with
playerctl as a python library.

--- a/dotfiles/i3blocks/config
+++ b/dotfiles/i3blocks/config
@@ -1,13 +1,12 @@
+[media]
+command=$HOME/System/scripts/bar/media.py
+interval=persist
+format=json
+
 [backup]
 command=$HOME/System/scripts/bar/systemd-state.py --user bup-home.service 
 interval=persist
 format=json
-
-[mpris]
-# Lately this has been getting stuck when the updates happen in extremely rapid
-# succession. So I added a sleep. I have no idea what changed. Computers!
-command=playerctl metadata --format '{{ status }} {{ artist }} - {{ title }}' --follow | perl -pe '$| = 1; s/^(Playing |Paused )( \- )?/\1/; s/^Playing /  /; s/^Paused /  /; s/https?:\/\/[\w\d\.]+ - //' | while read l; do printf "%s\n" "$l"; sleep 0.1; done
-interval=persist
 
 [updates]
 command=checkupdates | wc -l | awk '{ if ($1 != "0") { print "  "$1 }; }'
